# stellar_dAPP_3

./: README.md  SUBMISSION_CHECKLIST.md  vercel.json
.github/workflows/: ci.yml
contract/: Cargo.toml
contract/feedback-contract/: Cargo.toml
contract/feedback-contract/src/: lib.rs  test.rs
contract/feedback-contract/test_snapshots/test/: test_authorization_checks.1.json  test_create_and_get_feedback.1.json  test_empty_message_rejection.1.json  test_feedback_events_include_lifecycle_payloads.1.json  test_feedback_not_found.1.json  test_invalid_transition_rejection.1.json  test_multiple_feedbacks.1.json  test_registered_user_feedback_creation.1.json  test_resolve_feedback.1.json  test_review_feedback.1.json  test_unregistered_user_rejection.1.json
contract/user-registry-contract/: Cargo.toml
contract/user-registry-contract/src/: lib.rs  test.rs
docs/: deployment.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: AdminActions.jsx  CreateFeedbackForm.jsx  CreateFeedbackForm.test.jsx  ErrorAlert.jsx  ErrorAlert.test.jsx  FeedbackCard.jsx  FeedbackList.jsx  GetFeedback.jsx  LoadingSpinner.jsx  StatusBadge.jsx  StatusBadge.test.jsx  WalletConnect.jsx
frontend/src/config/: contracts.js  network.js
frontend/src/hooks/: useAutoRefresh.js  useFeedbackContract.js  useUserRegistry.js  useWallet.js
frontend/src/lib/: feedbackStore.js
frontend/src/pages/: AdminPage.jsx  DashboardPage.jsx  DashboardPage.test.jsx  RegisterPage.jsx  (+1 more)
scripts/: deploy-contract.ps1  deploy-contract.sh
(+9 files in other folders)
