[package]
name = "feedback-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
user-registry-contract = { path = "../user-registry-contract" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
